--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,12 +11,12 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build
       shell: bash
-      run: git archive --format=zip --prefix="pro-element/" HEAD > pro-element.zip
+      run: git archive --format=zip --prefix="elementor-pro-gpl/" HEAD > elementor-pro-gpl.zip
     - name: Upload binaries to release
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: pro-element.zip
+        file: elementor-pro-gpl.zip
         tag: ${{ github.ref }}
         overwrite: true
         body: "Release"
